Refactor almost everything